c-.output
Terminals which are not used

   OP
   ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier var_decl_list SEMI

    7 scoped_var_declaration: scoped_type_specifier var_decl_list SEMI

    8 var_decl_list: var_decl_list COMMA var_decl_initialize
    9              | var_decl_initialize

   10 var_decl_initialize: var_decl_id
   11                    | var_decl_id COLON simple_expression

   12 var_decl_id: ID
   13            | ID OBRAK NUMCONST CBRAK

   14 scoped_type_specifier: STATIC type_specifier
   15                      | type_specifier

   16 type_specifier: INT
   17               | BOOL
   18               | CHAR

   19 fun_declaration: type_specifier ID OPAREN params CPAREN statement
   20                | ID OPAREN params CPAREN statement

   21 params: param_list
   22       | /* empty */

   23 param_list: param_list SEMI param_type_list
   24           | param_type_list

   25 param_type_list: type_specifier param_id_list

   26 param_id_list: param_id_list COMMA param_id
   27              | param_id

   28 param_id: ID
   29         | ID OBRAK CBRAK

   30 statement: unmatched
   31          | matched

   32 matched: matched_selection
   33        | matched_iteration
   34        | expression_stmt
   35        | compound_stmt
   36        | return_stmt
   37        | break_stmt

   38 unmatched: unmatched_selection
   39          | unmatched_iteration

   40 compound_stmt: OBRACE local_declarations statement_list CBRACE

   41 local_declarations: local_declarations scoped_var_declaration
   42                   | /* empty */

   43 statement_list: statement_list statement
   44               | /* empty */

   45 expression_stmt: expression SEMI
   46                | SEMI

   47 matched_selection: IF OPAREN simple_expression CPAREN matched ELSE matched

   48 unmatched_selection: IF OPAREN simple_expression CPAREN matched ELSE unmatched
   49                    | IF OPAREN simple_expression CPAREN statement

   50 matched_iteration: WHILE OPAREN simple_expression CPAREN matched
   51                  | FOREACH OPAREN mutable IN simple_expression CPAREN matched

   52 unmatched_iteration: WHILE OPAREN simple_expression CPAREN unmatched
   53                    | FOREACH OPAREN mutable IN simple_expression CPAREN unmatched

   54 return_stmt: RETURN SEMI
   55            | RETURN expression SEMI

   56 break_stmt: BREAK SEMI

   57 expression: mutable ASSIGN expression
   58           | mutable ADDASS expression
   59           | mutable SUBASS expression
   60           | mutable MULASS expression
   61           | mutable DIVASS expression
   62           | mutable INC
   63           | mutable DEC
   64           | simple_expression

   65 simple_expression: simple_expression OR and_expression
   66                  | and_expression

   67 and_expression: and_expression AND unary_rel_expression
   68               | unary_rel_expression

   69 unary_rel_expression: NOT unary_rel_expression
   70                     | rel_expression

   71 rel_expression: sum_expression relop sum_expression
   72               | sum_expression

   73 relop: LESSEQ
   74      | LESS
   75      | GRT
   76      | GRTEQ
   77      | EQ
   78      | NOTEQ

   79 sum_expression: sum_expression sumop term
   80               | term

   81 sumop: ADD
   82      | SUB

   83 term: term mulop unary_expression
   84     | unary_expression

   85 mulop: MUL
   86      | DIV
   87      | MOD

   88 unary_expression: unaryop unary_expression
   89                 | factor

   90 unaryop: SUB
   91        | MUL
   92        | QUE

   93 factor: immutable
   94       | mutable

   95 mutable: ID
   96        | ID OBRAK expression CBRAK

   97 immutable: OPAREN expression CPAREN
   98          | call
   99          | constant

  100 call: ID OPAREN args CPAREN

  101 args: arg_list
  102     | /* empty */

  103 arg_list: arg_list COMMA expression
  104         | expression

  105 constant: NUMCONST
  106         | CHARCONST
  107         | STRINGCONST
  108         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 12 13 19 20 28 29 95 96 100
NUMCONST (259) 13 105
STRINGCONST (260) 107
CHARCONST (261) 106
BOOLCONST (262) 108
OP (263)
ERROR (264)
BOOL (265) 17
BREAK (266) 56
CHAR (267) 18
ELSE (268) 47 48
FOREACH (269) 51 53
IF (270) 47 48 49
IN (271) 51 53
INT (272) 16
RETURN (273) 54 55
STATIC (274) 14
WHILE (275) 50 52
ASSIGN (276) 57
NOTEQ (277) 78
EQ (278) 77
LESSEQ (279) 73
LESS (280) 74
GRTEQ (281) 76
GRT (282) 75
INC (283) 62
DEC (284) 63
ADDASS (285) 58
ADD (286) 81
SUBASS (287) 59
SUB (288) 82 90
MULASS (289) 60
MUL (290) 85 91
DIVASS (291) 61
DIV (292) 86
OPAREN (293) 19 20 47 48 49 50 51 52 53 97 100
CPAREN (294) 19 20 47 48 49 50 51 52 53 97 100
OBRACE (295) 40
CBRACE (296) 40
OBRAK (297) 13 29 96
CBRAK (298) 13 29 96
COMMA (299) 8 26 103
COLON (300) 11
SEMI (301) 6 7 23 45 46 54 55 56
MOD (302) 87
QUE (303) 92
AND (304) 67
OR (305) 65
NOT (306) 69


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
declaration_list (54)
    on left: 2 3, on right: 1 2
declaration (55)
    on left: 4 5, on right: 2 3
var_declaration (56)
    on left: 6, on right: 4
scoped_var_declaration (57)
    on left: 7, on right: 41
var_decl_list (58)
    on left: 8 9, on right: 6 7 8
var_decl_initialize (59)
    on left: 10 11, on right: 8 9
var_decl_id (60)
    on left: 12 13, on right: 10 11
scoped_type_specifier (61)
    on left: 14 15, on right: 7
type_specifier (62)
    on left: 16 17 18, on right: 6 14 15 19 25
fun_declaration (63)
    on left: 19 20, on right: 5
params (64)
    on left: 21 22, on right: 19 20
param_list (65)
    on left: 23 24, on right: 21 23
param_type_list (66)
    on left: 25, on right: 23 24
param_id_list (67)
    on left: 26 27, on right: 25 26
param_id (68)
    on left: 28 29, on right: 26 27
statement (69)
    on left: 30 31, on right: 19 20 43 49
matched (70)
    on left: 32 33 34 35 36 37, on right: 31 47 48 50 51
unmatched (71)
    on left: 38 39, on right: 30 48 52 53
compound_stmt (72)
    on left: 40, on right: 35
local_declarations (73)
    on left: 41 42, on right: 40 41
statement_list (74)
    on left: 43 44, on right: 40 43
expression_stmt (75)
    on left: 45 46, on right: 34
matched_selection (76)
    on left: 47, on right: 32
unmatched_selection (77)
    on left: 48 49, on right: 38
matched_iteration (78)
    on left: 50 51, on right: 33
unmatched_iteration (79)
    on left: 52 53, on right: 39
return_stmt (80)
    on left: 54 55, on right: 36
break_stmt (81)
    on left: 56, on right: 37
expression (82)
    on left: 57 58 59 60 61 62 63 64, on right: 45 55 57 58 59 60 61
    96 97 103 104
simple_expression (83)
    on left: 65 66, on right: 11 47 48 49 50 51 52 53 64 65
and_expression (84)
    on left: 67 68, on right: 65 66 67
unary_rel_expression (85)
    on left: 69 70, on right: 67 68 69
rel_expression (86)
    on left: 71 72, on right: 70
relop (87)
    on left: 73 74 75 76 77 78, on right: 71
sum_expression (88)
    on left: 79 80, on right: 71 72 79
sumop (89)
    on left: 81 82, on right: 79
term (90)
    on left: 83 84, on right: 79 80 83
mulop (91)
    on left: 85 86 87, on right: 83
unary_expression (92)
    on left: 88 89, on right: 83 84 88
unaryop (93)
    on left: 90 91 92, on right: 88
factor (94)
    on left: 93 94, on right: 89
mutable (95)
    on left: 95 96, on right: 51 53 57 58 59 60 61 62 63 94
immutable (96)
    on left: 97 98 99, on right: 93
call (97)
    on left: 100, on right: 98
args (98)
    on left: 101 102, on right: 100
arg_list (99)
    on left: 103 104, on right: 101 103
constant (100)
    on left: 105 106 107 108, on right: 99


state 0

    0 $accept: . program $end

    ID    shift, and go to state 1
    BOOL  shift, and go to state 2
    CHAR  shift, and go to state 3
    INT   shift, and go to state 4

    program           go to state 5
    declaration_list  go to state 6
    declaration       go to state 7
    var_declaration   go to state 8
    type_specifier    go to state 9
    fun_declaration   go to state 10


state 1

   20 fun_declaration: ID . OPAREN params CPAREN statement

    OPAREN  shift, and go to state 11


state 2

   17 type_specifier: BOOL .

    $default  reduce using rule 17 (type_specifier)


state 3

   18 type_specifier: CHAR .

    $default  reduce using rule 18 (type_specifier)


state 4

   16 type_specifier: INT .

    $default  reduce using rule 16 (type_specifier)


state 5

    0 $accept: program . $end

    $end  shift, and go to state 12


state 6

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    ID    shift, and go to state 1
    BOOL  shift, and go to state 2
    CHAR  shift, and go to state 3
    INT   shift, and go to state 4

    $default  reduce using rule 1 (program)

    declaration      go to state 13
    var_declaration  go to state 8
    type_specifier   go to state 9
    fun_declaration  go to state 10


state 7

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


state 8

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


state 9

    6 var_declaration: type_specifier . var_decl_list SEMI
   19 fun_declaration: type_specifier . ID OPAREN params CPAREN statement

    ID  shift, and go to state 14

    var_decl_list        go to state 15
    var_decl_initialize  go to state 16
    var_decl_id          go to state 17


state 10

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


state 11

   20 fun_declaration: ID OPAREN . params CPAREN statement

    BOOL  shift, and go to state 2
    CHAR  shift, and go to state 3
    INT   shift, and go to state 4

    $default  reduce using rule 22 (params)

    type_specifier   go to state 18
    params           go to state 19
    param_list       go to state 20
    param_type_list  go to state 21


state 12

    0 $accept: program $end .

    $default  accept


state 13

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 14

   12 var_decl_id: ID .
   13            | ID . OBRAK NUMCONST CBRAK
   19 fun_declaration: type_specifier ID . OPAREN params CPAREN statement

    OPAREN  shift, and go to state 22
    OBRAK   shift, and go to state 23

    $default  reduce using rule 12 (var_decl_id)


state 15

    6 var_declaration: type_specifier var_decl_list . SEMI
    8 var_decl_list: var_decl_list . COMMA var_decl_initialize

    COMMA  shift, and go to state 24
    SEMI   shift, and go to state 25


state 16

    9 var_decl_list: var_decl_initialize .

    $default  reduce using rule 9 (var_decl_list)


state 17

   10 var_decl_initialize: var_decl_id .
   11                    | var_decl_id . COLON simple_expression

    COLON  shift, and go to state 26

    $default  reduce using rule 10 (var_decl_initialize)


state 18

   25 param_type_list: type_specifier . param_id_list

    ID  shift, and go to state 27

    param_id_list  go to state 28
    param_id       go to state 29


state 19

   20 fun_declaration: ID OPAREN params . CPAREN statement

    CPAREN  shift, and go to state 30


state 20

   21 params: param_list .
   23 param_list: param_list . SEMI param_type_list

    SEMI  shift, and go to state 31

    $default  reduce using rule 21 (params)


state 21

   24 param_list: param_type_list .

    $default  reduce using rule 24 (param_list)


state 22

   19 fun_declaration: type_specifier ID OPAREN . params CPAREN statement

    BOOL  shift, and go to state 2
    CHAR  shift, and go to state 3
    INT   shift, and go to state 4

    $default  reduce using rule 22 (params)

    type_specifier   go to state 18
    params           go to state 32
    param_list       go to state 20
    param_type_list  go to state 21


state 23

   13 var_decl_id: ID OBRAK . NUMCONST CBRAK

    NUMCONST  shift, and go to state 33


state 24

    8 var_decl_list: var_decl_list COMMA . var_decl_initialize

    ID  shift, and go to state 34

    var_decl_initialize  go to state 35
    var_decl_id          go to state 17


state 25

    6 var_declaration: type_specifier var_decl_list SEMI .

    $default  reduce using rule 6 (var_declaration)


state 26

   11 var_decl_initialize: var_decl_id COLON . simple_expression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    QUE          shift, and go to state 44
    NOT          shift, and go to state 45

    simple_expression     go to state 46
    and_expression        go to state 47
    unary_rel_expression  go to state 48
    rel_expression        go to state 49
    sum_expression        go to state 50
    term                  go to state 51
    unary_expression      go to state 52
    unaryop               go to state 53
    factor                go to state 54
    mutable               go to state 55
    immutable             go to state 56
    call                  go to state 57
    constant              go to state 58


state 27

   28 param_id: ID .
   29         | ID . OBRAK CBRAK

    OBRAK  shift, and go to state 59

    $default  reduce using rule 28 (param_id)


state 28

   25 param_type_list: type_specifier param_id_list .
   26 param_id_list: param_id_list . COMMA param_id

    COMMA  shift, and go to state 60

    $default  reduce using rule 25 (param_type_list)


state 29

   27 param_id_list: param_id .

    $default  reduce using rule 27 (param_id_list)


state 30

   20 fun_declaration: ID OPAREN params CPAREN . statement

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    BREAK        shift, and go to state 61
    FOREACH      shift, and go to state 62
    IF           shift, and go to state 63
    RETURN       shift, and go to state 64
    WHILE        shift, and go to state 65
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    OBRACE       shift, and go to state 66
    SEMI         shift, and go to state 67
    QUE          shift, and go to state 44
    NOT          shift, and go to state 45

    statement             go to state 68
    matched               go to state 69
    unmatched             go to state 70
    compound_stmt         go to state 71
    expression_stmt       go to state 72
    matched_selection     go to state 73
    unmatched_selection   go to state 74
    matched_iteration     go to state 75
    unmatched_iteration   go to state 76
    return_stmt           go to state 77
    break_stmt            go to state 78
    expression            go to state 79
    simple_expression     go to state 80
    and_expression        go to state 47
    unary_rel_expression  go to state 48
    rel_expression        go to state 49
    sum_expression        go to state 50
    term                  go to state 51
    unary_expression      go to state 52
    unaryop               go to state 53
    factor                go to state 54
    mutable               go to state 81
    immutable             go to state 56
    call                  go to state 57
    constant              go to state 58


state 31

   23 param_list: param_list SEMI . param_type_list

    BOOL  shift, and go to state 2
    CHAR  shift, and go to state 3
    INT   shift, and go to state 4

    type_specifier   go to state 18
    param_type_list  go to state 82


state 32

   19 fun_declaration: type_specifier ID OPAREN params . CPAREN statement

    CPAREN  shift, and go to state 83


state 33

   13 var_decl_id: ID OBRAK NUMCONST . CBRAK

    CBRAK  shift, and go to state 84


state 34

   12 var_decl_id: ID .
   13            | ID . OBRAK NUMCONST CBRAK

    OBRAK  shift, and go to state 23

    $default  reduce using rule 12 (var_decl_id)


state 35

    8 var_decl_list: var_decl_list COMMA var_decl_initialize .

    $default  reduce using rule 8 (var_decl_list)


state 36

   95 mutable: ID .
   96        | ID . OBRAK expression CBRAK
  100 call: ID . OPAREN args CPAREN

    OPAREN  shift, and go to state 85
    OBRAK   shift, and go to state 86

    $default  reduce using rule 95 (mutable)


state 37

  105 constant: NUMCONST .

    $default  reduce using rule 105 (constant)


state 38

  107 constant: STRINGCONST .

    $default  reduce using rule 107 (constant)


state 39

  106 constant: CHARCONST .

    $default  reduce using rule 106 (constant)


state 40

  108 constant: BOOLCONST .

    $default  reduce using rule 108 (constant)


state 41

   90 unaryop: SUB .

    $default  reduce using rule 90 (unaryop)


state 42

   91 unaryop: MUL .

    $default  reduce using rule 91 (unaryop)


state 43

   97 immutable: OPAREN . expression CPAREN

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    QUE          shift, and go to state 44
    NOT          shift, and go to state 45

    expression            go to state 87
    simple_expression     go to state 80
    and_expression        go to state 47
    unary_rel_expression  go to state 48
    rel_expression        go to state 49
    sum_expression        go to state 50
    term                  go to state 51
    unary_expression      go to state 52
    unaryop               go to state 53
    factor                go to state 54
    mutable               go to state 81
    immutable             go to state 56
    call                  go to state 57
    constant              go to state 58


state 44

   92 unaryop: QUE .

    $default  reduce using rule 92 (unaryop)


state 45

   69 unary_rel_expression: NOT . unary_rel_expression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    QUE          shift, and go to state 44
    NOT          shift, and go to state 45

    unary_rel_expression  go to state 88
    rel_expression        go to state 49
    sum_expression        go to state 50
    term                  go to state 51
    unary_expression      go to state 52
    unaryop               go to state 53
    factor                go to state 54
    mutable               go to state 55
    immutable             go to state 56
    call                  go to state 57
    constant              go to state 58


state 46

   11 var_decl_initialize: var_decl_id COLON simple_expression .
   65 simple_expression: simple_expression . OR and_expression

    OR  shift, and go to state 89

    $default  reduce using rule 11 (var_decl_initialize)


state 47

   66 simple_expression: and_expression .
   67 and_expression: and_expression . AND unary_rel_expression

    AND  shift, and go to state 90

    $default  reduce using rule 66 (simple_expression)


state 48

   68 and_expression: unary_rel_expression .

    $default  reduce using rule 68 (and_expression)


state 49

   70 unary_rel_expression: rel_expression .

    $default  reduce using rule 70 (unary_rel_expression)


state 50

   71 rel_expression: sum_expression . relop sum_expression
   72               | sum_expression .
   79 sum_expression: sum_expression . sumop term

    NOTEQ   shift, and go to state 91
    EQ      shift, and go to state 92
    LESSEQ  shift, and go to state 93
    LESS    shift, and go to state 94
    GRTEQ   shift, and go to state 95
    GRT     shift, and go to state 96
    ADD     shift, and go to state 97
    SUB     shift, and go to state 98

    $default  reduce using rule 72 (rel_expression)

    relop  go to state 99
    sumop  go to state 100


state 51

   80 sum_expression: term .
   83 term: term . mulop unary_expression

    MUL  shift, and go to state 101
    DIV  shift, and go to state 102
    MOD  shift, and go to state 103

    $default  reduce using rule 80 (sum_expression)

    mulop  go to state 104


state 52

   84 term: unary_expression .

    $default  reduce using rule 84 (term)


state 53

   88 unary_expression: unaryop . unary_expression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    QUE          shift, and go to state 44

    unary_expression  go to state 105
    unaryop           go to state 53
    factor            go to state 54
    mutable           go to state 55
    immutable         go to state 56
    call              go to state 57
    constant          go to state 58


state 54

   89 unary_expression: factor .

    $default  reduce using rule 89 (unary_expression)


state 55

   94 factor: mutable .

    $default  reduce using rule 94 (factor)


state 56

   93 factor: immutable .

    $default  reduce using rule 93 (factor)


state 57

   98 immutable: call .

    $default  reduce using rule 98 (immutable)


state 58

   99 immutable: constant .

    $default  reduce using rule 99 (immutable)


state 59

   29 param_id: ID OBRAK . CBRAK

    CBRAK  shift, and go to state 106


state 60

   26 param_id_list: param_id_list COMMA . param_id

    ID  shift, and go to state 27

    param_id  go to state 107


state 61

   56 break_stmt: BREAK . SEMI

    SEMI  shift, and go to state 108


state 62

   51 matched_iteration: FOREACH . OPAREN mutable IN simple_expression CPAREN matched
   53 unmatched_iteration: FOREACH . OPAREN mutable IN simple_expression CPAREN unmatched

    OPAREN  shift, and go to state 109


state 63

   47 matched_selection: IF . OPAREN simple_expression CPAREN matched ELSE matched
   48 unmatched_selection: IF . OPAREN simple_expression CPAREN matched ELSE unmatched
   49                    | IF . OPAREN simple_expression CPAREN statement

    OPAREN  shift, and go to state 110


state 64

   54 return_stmt: RETURN . SEMI
   55            | RETURN . expression SEMI

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    SEMI         shift, and go to state 111
    QUE          shift, and go to state 44
    NOT          shift, and go to state 45

    expression            go to state 112
    simple_expression     go to state 80
    and_expression        go to state 47
    unary_rel_expression  go to state 48
    rel_expression        go to state 49
    sum_expression        go to state 50
    term                  go to state 51
    unary_expression      go to state 52
    unaryop               go to state 53
    factor                go to state 54
    mutable               go to state 81
    immutable             go to state 56
    call                  go to state 57
    constant              go to state 58


state 65

   50 matched_iteration: WHILE . OPAREN simple_expression CPAREN matched
   52 unmatched_iteration: WHILE . OPAREN simple_expression CPAREN unmatched

    OPAREN  shift, and go to state 113


state 66

   40 compound_stmt: OBRACE . local_declarations statement_list CBRACE

    $default  reduce using rule 42 (local_declarations)

    local_declarations  go to state 114


state 67

   46 expression_stmt: SEMI .

    $default  reduce using rule 46 (expression_stmt)


state 68

   20 fun_declaration: ID OPAREN params CPAREN statement .

    $default  reduce using rule 20 (fun_declaration)


state 69

   31 statement: matched .

    $default  reduce using rule 31 (statement)


state 70

   30 statement: unmatched .

    $default  reduce using rule 30 (statement)


state 71

   35 matched: compound_stmt .

    $default  reduce using rule 35 (matched)


state 72

   34 matched: expression_stmt .

    $default  reduce using rule 34 (matched)


state 73

   32 matched: matched_selection .

    $default  reduce using rule 32 (matched)


state 74

   38 unmatched: unmatched_selection .

    $default  reduce using rule 38 (unmatched)


state 75

   33 matched: matched_iteration .

    $default  reduce using rule 33 (matched)


state 76

   39 unmatched: unmatched_iteration .

    $default  reduce using rule 39 (unmatched)


state 77

   36 matched: return_stmt .

    $default  reduce using rule 36 (matched)


state 78

   37 matched: break_stmt .

    $default  reduce using rule 37 (matched)


state 79

   45 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 115


state 80

   64 expression: simple_expression .
   65 simple_expression: simple_expression . OR and_expression

    OR  shift, and go to state 89

    $default  reduce using rule 64 (expression)


state 81

   57 expression: mutable . ASSIGN expression
   58           | mutable . ADDASS expression
   59           | mutable . SUBASS expression
   60           | mutable . MULASS expression
   61           | mutable . DIVASS expression
   62           | mutable . INC
   63           | mutable . DEC
   94 factor: mutable .

    ASSIGN  shift, and go to state 116
    INC     shift, and go to state 117
    DEC     shift, and go to state 118
    ADDASS  shift, and go to state 119
    SUBASS  shift, and go to state 120
    MULASS  shift, and go to state 121
    DIVASS  shift, and go to state 122

    $default  reduce using rule 94 (factor)


state 82

   23 param_list: param_list SEMI param_type_list .

    $default  reduce using rule 23 (param_list)


state 83

   19 fun_declaration: type_specifier ID OPAREN params CPAREN . statement

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    BREAK        shift, and go to state 61
    FOREACH      shift, and go to state 62
    IF           shift, and go to state 63
    RETURN       shift, and go to state 64
    WHILE        shift, and go to state 65
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    OBRACE       shift, and go to state 66
    SEMI         shift, and go to state 67
    QUE          shift, and go to state 44
    NOT          shift, and go to state 45

    statement             go to state 123
    matched               go to state 69
    unmatched             go to state 70
    compound_stmt         go to state 71
    expression_stmt       go to state 72
    matched_selection     go to state 73
    unmatched_selection   go to state 74
    matched_iteration     go to state 75
    unmatched_iteration   go to state 76
    return_stmt           go to state 77
    break_stmt            go to state 78
    expression            go to state 79
    simple_expression     go to state 80
    and_expression        go to state 47
    unary_rel_expression  go to state 48
    rel_expression        go to state 49
    sum_expression        go to state 50
    term                  go to state 51
    unary_expression      go to state 52
    unaryop               go to state 53
    factor                go to state 54
    mutable               go to state 81
    immutable             go to state 56
    call                  go to state 57
    constant              go to state 58


state 84

   13 var_decl_id: ID OBRAK NUMCONST CBRAK .

    $default  reduce using rule 13 (var_decl_id)


state 85

  100 call: ID OPAREN . args CPAREN

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    QUE          shift, and go to state 44
    NOT          shift, and go to state 45

    $default  reduce using rule 102 (args)

    expression            go to state 124
    simple_expression     go to state 80
    and_expression        go to state 47
    unary_rel_expression  go to state 48
    rel_expression        go to state 49
    sum_expression        go to state 50
    term                  go to state 51
    unary_expression      go to state 52
    unaryop               go to state 53
    factor                go to state 54
    mutable               go to state 81
    immutable             go to state 56
    call                  go to state 57
    args                  go to state 125
    arg_list              go to state 126
    constant              go to state 58


state 86

   96 mutable: ID OBRAK . expression CBRAK

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    QUE          shift, and go to state 44
    NOT          shift, and go to state 45

    expression            go to state 127
    simple_expression     go to state 80
    and_expression        go to state 47
    unary_rel_expression  go to state 48
    rel_expression        go to state 49
    sum_expression        go to state 50
    term                  go to state 51
    unary_expression      go to state 52
    unaryop               go to state 53
    factor                go to state 54
    mutable               go to state 81
    immutable             go to state 56
    call                  go to state 57
    constant              go to state 58


state 87

   97 immutable: OPAREN expression . CPAREN

    CPAREN  shift, and go to state 128


state 88

   69 unary_rel_expression: NOT unary_rel_expression .

    $default  reduce using rule 69 (unary_rel_expression)


state 89

   65 simple_expression: simple_expression OR . and_expression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    QUE          shift, and go to state 44
    NOT          shift, and go to state 45

    and_expression        go to state 129
    unary_rel_expression  go to state 48
    rel_expression        go to state 49
    sum_expression        go to state 50
    term                  go to state 51
    unary_expression      go to state 52
    unaryop               go to state 53
    factor                go to state 54
    mutable               go to state 55
    immutable             go to state 56
    call                  go to state 57
    constant              go to state 58


state 90

   67 and_expression: and_expression AND . unary_rel_expression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    QUE          shift, and go to state 44
    NOT          shift, and go to state 45

    unary_rel_expression  go to state 130
    rel_expression        go to state 49
    sum_expression        go to state 50
    term                  go to state 51
    unary_expression      go to state 52
    unaryop               go to state 53
    factor                go to state 54
    mutable               go to state 55
    immutable             go to state 56
    call                  go to state 57
    constant              go to state 58


state 91

   78 relop: NOTEQ .

    $default  reduce using rule 78 (relop)


state 92

   77 relop: EQ .

    $default  reduce using rule 77 (relop)


state 93

   73 relop: LESSEQ .

    $default  reduce using rule 73 (relop)


state 94

   74 relop: LESS .

    $default  reduce using rule 74 (relop)


state 95

   76 relop: GRTEQ .

    $default  reduce using rule 76 (relop)


state 96

   75 relop: GRT .

    $default  reduce using rule 75 (relop)


state 97

   81 sumop: ADD .

    $default  reduce using rule 81 (sumop)


state 98

   82 sumop: SUB .

    $default  reduce using rule 82 (sumop)


state 99

   71 rel_expression: sum_expression relop . sum_expression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    QUE          shift, and go to state 44

    sum_expression    go to state 131
    term              go to state 51
    unary_expression  go to state 52
    unaryop           go to state 53
    factor            go to state 54
    mutable           go to state 55
    immutable         go to state 56
    call              go to state 57
    constant          go to state 58


state 100

   79 sum_expression: sum_expression sumop . term

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    QUE          shift, and go to state 44

    term              go to state 132
    unary_expression  go to state 52
    unaryop           go to state 53
    factor            go to state 54
    mutable           go to state 55
    immutable         go to state 56
    call              go to state 57
    constant          go to state 58


state 101

   85 mulop: MUL .

    $default  reduce using rule 85 (mulop)


state 102

   86 mulop: DIV .

    $default  reduce using rule 86 (mulop)


state 103

   87 mulop: MOD .

    $default  reduce using rule 87 (mulop)


state 104

   83 term: term mulop . unary_expression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    QUE          shift, and go to state 44

    unary_expression  go to state 133
    unaryop           go to state 53
    factor            go to state 54
    mutable           go to state 55
    immutable         go to state 56
    call              go to state 57
    constant          go to state 58


state 105

   88 unary_expression: unaryop unary_expression .

    $default  reduce using rule 88 (unary_expression)


state 106

   29 param_id: ID OBRAK CBRAK .

    $default  reduce using rule 29 (param_id)


state 107

   26 param_id_list: param_id_list COMMA param_id .

    $default  reduce using rule 26 (param_id_list)


state 108

   56 break_stmt: BREAK SEMI .

    $default  reduce using rule 56 (break_stmt)


state 109

   51 matched_iteration: FOREACH OPAREN . mutable IN simple_expression CPAREN matched
   53 unmatched_iteration: FOREACH OPAREN . mutable IN simple_expression CPAREN unmatched

    ID  shift, and go to state 134

    mutable  go to state 135


state 110

   47 matched_selection: IF OPAREN . simple_expression CPAREN matched ELSE matched
   48 unmatched_selection: IF OPAREN . simple_expression CPAREN matched ELSE unmatched
   49                    | IF OPAREN . simple_expression CPAREN statement

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    SUB          shift, and go to state 41
    MUL          shift, and go to state 42
    OPAREN       shift, and go to state 43
    QUE          shift, and go to state 44
    NOT          shift, and go to state 45

    simple_expression     go to state 136
    and_expression        go to state 47
    unary_rel_expression  go to state 48
    rel_expression        go to state 49
    sum_expression        go to state 50
    term                  go to state 51
    unary_expression      go to state 52
    unaryop               go to state 53
    factor                go to state 54
    mutable               go to state 55
    immutable             go to state 56
    call                  go to state 57
    constant              go to state 58


state 111

   54 return_stmt: RETURN SEMI .

    $default  reduce using rule 54 (return_stmt)


state 112

   55 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 137


state 113
